--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Wilfred codes</title>
+    <title>Will codes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
